<resources>
    <string name="app_name">Voce</string>
    <string name="hello">Hello</string>
    <string name="signup_title">Create account</string>
    <string name="email_placeholder">youremail@gmail.com</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="snow_white_amp_the_7_dwarfs"><![CDATA[Snow White & the 7 Dwarfs]]></string>
    <string name="start">Start</string>

    <string-array name="types">
        <item>Developmental Stuttering</item>
        <item>Neurogenic Stuttering</item>
        <item>Psychogenic Stuttering</item>
    </string-array>

    <string name="str">
    Once upon a time, a princess named Snow White lived in a castle with her father, the King, and her stepmother, the Queen.  Her father had always said to his daughter that she must be fair to everyone at court.  Said he, “People come here to the castle when they have a problem.  They need the ruler to make a fair decision.  Nothing is more important than to be fair.”
The Queen, Snow White’s stepmother, knew how much this meant to her husband. At the first chance, she went to her magic mirror.  “Mirror, mirror, on the wall,” said the Queen.  “Who is the fairest of them all?”

 “Snow White is the fairest of them all!” said the Magic Mirror.
    </string>

</resources>